# ros2_gazebo_sandbox

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: 2leos.launch.py  single.launch.py  spawn_leo.launch.py  spawn_multimodal.launch.py
plugins/: fake_flight_controller.cpp
worlds/: empty.sdf  map_gen_dummy.sdf  shackleton.sdf
